1.vuex版本基本页面重构完成 2.vuex版本配合自写库elephant实现了局部store 3.每个页面组件都自带一个store.js文件 4.删掉MS-others里面多余的项目 5.明天继续组件的store编写

--- a/MS-others/package.json
+++ b/MS-others/package.json
@@ -4,7 +4,7 @@
   "description": "musicShare app with other plugins",
   "main": "server.js",
   "scripts": {
-    "dev": "node server"
+    "dev": "node server --inline --hot"
   },
   "author": "hjp",
   "license": "MIT",
