修改vuex版本形式

--- a/MS-vuex/package.json
+++ b/MS-vuex/package.json
@@ -4,7 +4,8 @@
   "description": "musicShare app with other plugins",
   "main": "server.js",
   "scripts": {
-    "dev": "node server --inline --hot"
+    "dev": "node server --inline --hot", 
+    "build": "cd build && webpack --progress --colors && cd .."
   },
   "author": "hjp",
   "license": "MIT",
